2002-08-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Hacks for compatibility with MacOS-X in returning
	path of a file URL ... the RFC says we should only return a path
	for a generic URL (scheme://user:passwd@host:port/path#frag?query)
	which a file URL certainly isn't.  However, for compatibility we
	now treat a file URL more like a generic one.
	Also when creating absolute file URLs from base plus relative,
	the MacOS-X code doesn't strip the last path component of the
	base URL as it should ... we emulate that too.

2002-08-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Fix typo ... missing closing brace under
	windoze. Reported by Alex Stockdale.

2002-08-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([-replacementObjectForPortCoder:])
	Documented method and removed unused/unwanted code dealing with
	NSDistantObject (NSDistantObject overrides the method).

2002-08-20  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSObject.m: Fix silly typo.

2002-08-20  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSConnection.m: (-removeProxy:) Remove unbalanced release.

2002-08-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCountedSet.m:
	* Source/GSFileHandle.m:
	* Source/NSArchiver.m:
	* Source/NSData.m:
	* Source/NSDistributedNotificationCenter.m:
	* Source/NSHashTable.m:
	* Source/NSMapTable.m:
	* Source/NSObjCRuntime.m:
	* Source/NSObject.m:
	* Source/NSPortCoder.m:
	* Source/NSScanner.m:
	* Source/NSString.m:
	* Source/Unicode.m:
	* Source/UnixFileHandle.m:
	* Source/WindowsFileHandle.m:
	* Source/callframe.m:
	* Source/cifframe.m:
	* Source/mframe.m:
	Fix trivial typos and spelling errors pointed out by David Ayers.

2002-08-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCountedSet.m:
	* Source/NSAutoreleasePool.m:
	* Source/NSCharacterSet.m:
	* Source/NSCountedSet.m:
	* Source/NSData.m:
	* Source/NSDebug.m:
	* Source/NSDictionary.m:
	* Source/NSFileHandle.m: