@@ -1,5 +1,11 @@
 2002-08-24  Richard Frith-Macdonald <rfm@gnu.org>
 
+	* Source/NSURL.m: ([-initFileURLWithPath:]) check to see if path is
+	a directory and append a trailing slash if necessary.  Remove hack
+	to refrain from stripping last patch component in file URLs.
+
+2002-08-24  Richard Frith-Macdonald <rfm@gnu.org>
+
 	* Source/NSURL.m: Hacks for compatibility with MacOS-X in returning
 	path of a file URL ... the RFC says we should only return a path
 	for a generic URL (scheme://user:passwd@host:port/path#frag?query)
